--- a/assets/css/wasm.css
+++ b/assets/css/wasm.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
 }
-.options {
+.pattern-options {
   max-width: 500px;
   padding: 10px;
   background-color: rgb(56, 61, 60);
